--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@
   margin: 0;
   list-style: none;
   text-decoration: none;
-  box-sizing: border-box; /*esse eh top*/
+  box-sizing: border-box; 
 }
 
 html {
@@ -42,13 +42,21 @@ body {
 }
 
 button {
-    height: 48px;
-    width: 210px;
+    height: 49px;
+    padding: 0 70px;
     background-color: var(--color__marron);
     border-radius: 5px;
-    border: var(--color__border);
+    border: var(--color__cinza);
     color: var(--color__branco);
     font-weight: bold;
+    font-size: 16px;
+}
 
+.input {
+    border: none;
+    border-radius: 5px;
+    height: 48px;
+    padding-left: 16px;
+    outline: none;
 
 }
