--- a/css/variabels.css
+++ b/css/variabels.css
@@ -8,4 +8,5 @@
 --color__sombra:1px 1px 2px rgb(192, 192, 192);
 --color__border:1px solid #b6b5b5;
 --color__transparente:  rgba(0, 0, 0, 0.05);
+--color__footer: #4C4545;
 }
