--- a/css/extends.css
+++ b/css/extends.css
@@ -1,7 +1,10 @@
 @import './global.css';
 @import './variabels.css';
 
+
 @import './components/header.css';
 @import './components/newsletter.css';
 @import '/css/components/footer.css';
-@import './components/login.css;';
+@import './components/login.css';
+@import './components/banner.css'
+
