mudança no extends

--- a/css/extends.css
+++ b/css/extends.css
@@ -4,7 +4,7 @@
 
 @import './components/header.css';
 @import './components/newsletter.css';
-@import '/css/components/footer.css';
+@import './components/footer.css';
 @import './components/login.css';
 @import './components/banner.css'
 
