--- a/css/extends.css
+++ b/css/extends.css
@@ -2,11 +2,13 @@
 @import './variabels.css';
 
 @import './components/header.css';
-@import './components/banner.css'; 
+@import './components/main.css'; 
 @import './components/newsletter.css';
 @import '/components/footer.css';
 
+@import './components/login.css';
 
+@import './components/footer.css';
 
 
 
