--- a/css/variabels.css
+++ b/css/variabels.css
@@ -1,6 +1,6 @@
 :root {
 --color__cinza: #555555;
---bg__color__one: #4c4545;
+--bg__color__one: #bdbdbd;
 --color__preto: #0f0f0f;
 --color__branco: #f3f3f3;
 --color__bege: #EBE1D8;
