--- a/css/components/login.css
+++ b/css/components/login.css
@@ -1,83 +1,73 @@
-  .login-container {
+.login{
+
+    background-color: #f9f9f9;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 4rem 1rem;
+    justify-content: center;
+    height: 100vh;
+}
+.login-container {
+    background: white;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    max-width: 400px;
+    width: 90%;
     text-align: center;
-    font-family: sans-serif;
-  }
+}
 
-  .login-logo img {
-    width: 160px;
-    margin-bottom: 2rem;
-  }
+.logo__login {
+    max-width: 100%;
 
-  .login-title {
-    font-size: 1.5rem;
-    font-weight: bold;
+}
+
+h2 {
     margin-bottom: 0.5rem;
-  }
+}
 
-  .login-subtitle {
-    font-size: 1rem;
-    color: #777;
-    margin-bottom: 2rem;
-  }
-
-  .login-form {
+input[type="email"], input[type="password"] {
     width: 100%;
-    max-width: 360px;
-    text-align: left;
-  }
-
-  .login-form label {
-    font-size: 0.875rem;
-    margin-bottom: 0.25rem;
-    display: block;
-  }
-
-  .login-form input {
-    width: 100%;
-    padding: 0.75rem;
-    margin-bottom: 1rem;
+    padding: 12px;
+    margin: 10px 0;
+    border:var(--color__border);
     border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-  }
+}
 
-  .forgot-password {
-    text-align: right;
-    font-size: 0.875rem;
-    margin-top: -0.8rem;
-    margin-bottom: 1rem;
-  }
-
-  .forgot-password a {
-    color: #bb6b4a;
-    text-decoration: none;
-    font-weight: 500;
-  }
-
-  .login-button {
+.button__login{
     width: 100%;
-    background-color: #bb6b4a;
+    padding: 12px;
+    background-color:var(--color__marron);
     color: white;
     border: none;
-    padding: 0.9rem;
     border-radius: 6px;
-    font-size: 1rem;
     cursor: pointer;
-  }
+    font-size: 1.4rem;
+    margin-top: 20px;
+}
 
-  .login-footer {
-    margin-top: 1.5rem;
-    font-size: 0.9rem;
-    color: #666;
-    text-align: center;
-  }
+.button__login:hover {
+    background-color:var(--color__marron);
+}
 
-  .login-footer a {
-    color: #bb6b4a;
-    font-weight: 500;
+.footer-text {
+    margin-top: 1rem;
+    font-size: 1.4rem;
+}
+
+.footer-text a {
+    color: var(--color__marron);
     text-decoration: none;
-  }
+}
+
+.erro {
+    color: red;
+    font-size: 0.9rem;
+}
+
+.senha-wrapper {
+    position: relative;
+    
+}
+
+
+
