Correções de bugs

--- a/css/components/newsletter.css
+++ b/css/components/newsletter.css
@@ -1,9 +1,12 @@
-
+.newsletter {
+      background-color: aqua;
+}
 .newsletter__container {
   display: flex;
   flex-direction: column;
   padding: 24px 24px;
   gap: 32px;
+  background-color: #7f7f7f;
 
 }
 .newsletter__left {
