--- a/css/variables.css
+++ b/css/variables.css
@@ -9,4 +9,5 @@
 --color__border:1px solid #b6b5b5;
 --color__transparente:  rgba(0, 0, 0, 0.05);
 --color__footer: #4C4545;
+--color__marronescuro:#97674e;
 }
