--- a/css/components/header.css
+++ b/css/components/header.css
@@ -32,7 +32,10 @@ header {
 
   display: block;
   padding: 5px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
+
+
 
 header .header__main {
   display: flex;
