--- a/css/extends.css
+++ b/css/extends.css
@@ -1,13 +1,12 @@
 @import './global.css';
 @import './variables.css';
-
 @import './components/header.css';
 @import './components/main.css'; 
 @import './components/newsletter.css';
 @import './components/footer.css';
 @import './components/login.css';
 @import './components/products__single.css';
-
+@import './components/produtos.css'
 
 
 
