Pagina de PRODUTOS FINALIZADA

--- a/css/components/produtos.css
+++ b/css/components/produtos.css
@@ -126,6 +126,10 @@ margin-bottom: 32px;
       font-weight: bold;
 }
 
+.filter .filter__icon {
+      cursor:pointer;
+}
+
 .filter .filter__option{
       display: flex;
       align-items: center;
