--- a/css/global.css
+++ b/css/global.css
@@ -52,6 +52,12 @@ button {
     font-weight: bold;
     font-size: 16px;
 }
+button:hover {
+      background-color: var(--color__footer);
+      cursor: pointer;
+}
+
+
 
 .input {
     border: none;
@@ -59,5 +65,5 @@ button {
     height: 48px;
     padding-left: 16px;
     outline: none;
-
+    border: var(--color__border);
 }
