--- a/css/variables.css
+++ b/css/variables.css
@@ -6,7 +6,7 @@
 --color__bege: #EBE1D8;
 --color__marron:#BA7857;
 --color__sombra:1px 1px 2px rgb(192, 192, 192);
---color__border:1px solid #b6b5b5;
+--color__border:1px solid #c0b8b8;
 --color__transparente:  rgba(0, 0, 0, 0.05);
 --color__footer: #4C4545;
 --color__marronescuro:#97674e;
