--- a/css/extends.css
+++ b/css/extends.css
@@ -9,7 +9,7 @@
 @import './components/products__single.css';
 @import './components/produtos.css';
 @import './components/produtounic.css';
-@import '/css/components/checkout.css';
+@import './css/components/checkout.css';
 
 
 
